@@ -91,6 +91,7 @@
 #include "tupleobject.h"
 #include "listobject.h"
 #include "dictobject.h"
+#include "enumobject.h"
 #include "methodobject.h"
 #include "moduleobject.h"
 #include "funcobject.h"
